human-intervention-logs/org.apache.tomcat.embed:tomcat-embed-core:11.0.18/gradle-test/gradle-test-2026-05-20T12-37-42-771929Z.log
> Task :tck-build-logic:extractPluginRequests FROM-CACHE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins FROM-CACHE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.tomcat.embed:tomcat-embed-core:11.0.18
Command: `/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/NamingStringManagerTest.java:20: error: no suitable method found for getManager(String,Locale)
        StringManager manager = StringManager.getManager("org.apache.naming", Locale.ENGLISH);
                                             ^
    method StringManager.getManager(String) is not applicable
      (actual and formal argument lists differ in length)
    method StringManager.getManager(Class<?>) is not applicable
      (actual and formal argument lists differ in length)
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/TomcatDynamicAccessTest.java:28: error: cannot find symbol
        tomcat.getHost().setContextClass(CustomContext.class.getName());
                        ^
  symbol:   method setContextClass(String)
  location: interface Host
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/AuthConfigFactoryTest.java:37: error: TestAuthConfigFactory is not abstract and does not override abstract method removeServerAuthModule(Object) in AuthConfigFactory
    public static class TestAuthConfigFactory extends AuthConfigFactory {
                  ^
Note: /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/ClasspathURLStreamHandlerTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/ClasspathURLStreamHandlerTest.java uses or overrides a deprecated API.
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/NamingStringManagerTest.java:20: error: no suitable method found for getManager(String,Locale)
          StringManager manager = StringManager.getManager("org.apache.naming", Locale.ENGLISH);
                                               ^
      method StringManager.getManager(String) is not applicable
        (actual and formal argument lists differ in length)
      method StringManager.getManager(Class<?>) is not applicable
        (actual and formal argument lists differ in length)
  Note: Recompile with -Xlint:deprecation for details.
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/AuthConfigFactoryTest.java:37: error: TestAuthConfigFactory is not abstract and does not override abstract method removeServerAuthModule(Object) in AuthConfigFactory
      public static class TestAuthConfigFactory extends AuthConfigFactory {
                    ^
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/tests/src/org.apache.tomcat.embed/tomcat-embed-core/11.0.18/src/test/java/tomcat/TomcatDynamicAccessTest.java:28: error: cannot find symbol
          tomcat.getHost().setContextClass(CustomContext.class.getName());
                          ^
    symbol:   method setContextClass(String)
    location: interface Host
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.


For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
BUILD FAILED in 11s11 actionable tasks: 1 executed, 10 up-to-date


> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5926-de95dd6c/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.tomcat.embed:tomcat-embed-core:11.0.18 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 14s
9 actionable tasks: 2 executed, 2 from cache, 5 up-to-date
